Added recommendation report, last cleanup

--- a/PetDesk.Challenge/appsettings.json
+++ b/PetDesk.Challenge/appsettings.json
@@ -14,13 +14,15 @@
     "Ssl": false,
     "ConnectTimeout": 6000,
     "ConnectRetry": 2,
-    "AsyncTimeout":  3000, 
+    "SyncTimeout": 10000,
+    "AsyncTimeout": 10000,
+    "Timeout": 10000,
     "Hosts": [
       {
         "Host": "localhost",
         "Port": "6379"
       }
     ],
-    "Database": 0
+    "Database": 1
   }
 }
