--- a/PetDesk.Challenge/Properties/launchSettings.json
+++ b/PetDesk.Challenge/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "reports",
+      "launchUrl": "api/reports",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
